--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "^9.3.2",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "amazon-cognito-identity-js": "^5.2.10",
+    "aws-amplify": "^4.3.37",
+    "aws-amplify-react-native": "^6.0.5",
     "react": "18.1.0",
     "react-hook-form": "^7.36.1",
     "react-native": "0.70.0",
